[package]
name = "mutation-monitor"
description = "Watch your Rust for mutations"
version = "0.1.0"
edition = "2021"
author = "umikoio"
license = "MIT"
categories = ["Rust Patterns", "Caching"]
keywords = ["mutate", "api", "rust", "utility", "logging"]
repository = "https://github.com/umikoio/mutation-monitor"

[dependencies]
