[package]
name = "mutation-monitor"
description = "Observe mutations of a value and generate a callback when the value has mutated"
version = "0.1.0"
edition = "2021"
author = "umikoio"
license = "MIT"
categories = ["Rust Patterns", "Caching"]
keywords = ["mutate", "api", "rust", "utility", "logging"]
repository = "https://github.com/umikoio/mutation-monitor"

[dependencies]
